docker.sapphiretech.cc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-registry-ingress
  namespace: docker-registry
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  tls:
  - hosts:
    - docker.sapphiretech.cc
    secretName: docker-registry-tls
  ingressClassName: nginx
  rules:
  - host: "docker.sapphiretech.cc"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: docker-registry
            port:
              number: 5000
